# bastardkb-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: ci.bash
.github/workflows/: ci.yml
docs/: protocol_over_trrs.md
examples/: blinky_led_liatris.rs
firmware/: Cargo.toml  build.rs
firmware/examples/: blinky_led.rs  blinky_led_liatris.rs  encoder.rs  pio_comms.rs  pio_compound.rs  pio_ping.rs  pio_ping_pong.rs  protocol.rs  rgb_leds.rs
firmware/src/: core.rs  device.rs  hid.rs  keymap_basic.rs  keymap_borisfaure.rs  keymap_test.rs  keys.rs  layout.rs  main.rs  mouse.rs  pmw3360.rs  rgb_led.pio  rgb_leds.rs  rx.pio  side.rs  tx.pio  usb.rs
firmware/src/trackball/: firmware.rs  mod.rs
firmware/src/trackpad/: driver.rs  mod.rs  mod_old.rs
src/: device.rs  hid.rs  keymap_basic.rs  keys.rs  layout.rs  main.rs  rx.pio  side.rs  tx.pio
utils/: Cargo.toml
utils/src/: lib.rs  log.rs  mouse_move.rs  prng.rs  protocol.rs  rgb_anims.rs  serde.rs  sid.rs
