[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
default = ["keymap_borisfaure"]

[dependencies]
utils = {path = "../utils"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy",features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy"}

pio = "0.2"
pio-proc = "0.2"

fixed = "1.24"
fixed-macro = "1.2"

keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "shifted_seq" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0"
