[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
debug_tick = []
cnano = ["utils/cnano"]
dilemma = ["utils/dilemma"]
default = ["keymap_borisfaure", "dilemma"]

[dependencies]
utils = {path = "../utils", features = ["defmt"]}
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4", features = ["rt", "defmt", "time-driver", "critical-section-impl", "rp2040",
"rom-func-cache", "intrinsics", "rom-v2-intrinsics"] }
embassy-usb = { version = "0.4",features = ["defmt"] }
embassy-futures = "0.1"
embassy-usb-logger = "0.4"

fixed = "1.24"
fixed-macro = "1.2"

keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "shifted_seq" }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = [ "async" ] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0"
num = { version = "0.4", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
bitfield-struct = "0.10"

[dev-dependencies]
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
