[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
input_leds = [ "utils/input_leds" ]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "utils/defmt",
    "embassy-embedded-hal/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-rp/defmt",
    "embassy-usb/defmt",
]
cnano = ["utils/cnano"]
dilemma = ["utils/dilemma"]
default = ["keymap_borisfaure", "dilemma"]

[dependencies]
utils = {path = "../utils"}
embassy-embedded-hal = { version = "0.5" }
embassy-sync = { version = "0.7" }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5" }
embassy-rp = { version = "0.8", features = ["rt", "time-driver", "critical-section-impl", "rp2040",
"rom-func-cache", "intrinsics", "rom-v2-intrinsics"] }
embassy-usb = { version = "0.5" }
embassy-futures = "0.1"
embassy-usb-logger = "0.5"
portable-atomic = { version = "1.11", features = ["critical-section"] }
static_cell = "2.1"

fixed = "1.24"
fixed-macro = "1.2"

keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "shifted_seq" }

defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.0", optional = true }
panic-probe = { version = "1.0", features = ["print-defmt"], optional = true }
panic-halt = "1.0"

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = [ "async" ] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
heapless = { version = "0.9", default-features = false }
nb = "1.0"
num = { version = "0.4", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
bitfield-struct = "0.12"

[dev-dependencies]
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
