[package]
name = "utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
defmt = ["dep:defmt"]
log-protocol = []
dilemma = []
cnano = []
default = []

[dependencies]
crc16 = "0.4"
arraydeque.workspace = true

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
defmt = { version = "1.0", optional = true }
[target.'cfg(target_arch = "x86_64")'.dependencies]
log = "0.4"
lovely_env_logger = "0.6"
tokio = { version = "1" , features = ["full"] }
